--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,10 @@ uuid = "7fe627e2-2553-44c3-aa13-292e356d3647"
 authors = ["Gabe Hassler <gabriel.w.hassler@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+
 [compat]
 julia = "1"
 
