--- a/Project.toml
+++ b/Project.toml
@@ -13,10 +13,13 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
-CSV = "0.8"
-DataFrames = "0.22"
-Gadfly = "1.3"
-PhyloNetworks = "0.13"
+CSV = "0.8,0.9,0.10"
+DataFrames = "1"
+Gadfly = "1"
+PhyloNetworks = "0.13, 0.14"
+HypothesisTests = "0.10"
+Statistics = "1"
+UnPack = "1"
 julia = "1"
 
 [extras]
